kubernetes/ing.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: tackle
  labels:
    app.kubernetes.io/name: tackle
    app.kubernetes.io/component: application
    app.kubernetes.io/instance: tackle
    app.kubernetes.io/part-of: tackle
spec:
  rules:
    - http:
        paths:
          - path: /auth
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
          - path: /controls
            pathType: ImplementationSpecific
            backend:
              service:
                name: tackle-controls
                port:
                  number: 8080
          - path: /application-inventory
            pathType: ImplementationSpecific
            backend:
              service:
                name: tackle-application-inventory
                port:
                  number: 8080
